# JJXZbdBayXaTn

./: README.md  dashboard.json  playbook-cronos.yaml  playbook-telemetry.yaml  question1-arch.puml
cdk-question-1/: README.md  cdk.json  package-lock.json  package.json
cdk-question-1/lib/: cdk-question-1-stack.ts
cdk-question-1/test/: cdk-question-1.test.ts
role-cronos/: README.md
role-cronos/defaults/: main.yml
role-cronos/handlers/: main.yml
role-cronos/tasks/: main.yml
role-cronos/templates/: cronosd.service.j2
role-cronos/tests/: test.yml
role-cronos/vars/: main.yml
role-docker/: README.md
role-docker/tasks/: main.yml
role-grafana/: README.md
role-grafana/defaults/: main.yml
role-grafana/handlers/: main.yml
role-grafana/tasks/: main.yml
role-grafana/tests/: test.yml
role-grafana/vars/: main.yml
role-prometheus/: README.md
role-prometheus/defaults/: main.yml
role-prometheus/handlers/: main.yml
role-prometheus/meta/: main.yml
role-prometheus/tasks/: main.yml
role-prometheus/templates/: prometheus.yml.j2
role-prometheus/tests/: test.yml
role-prometheus/vars/: main.yml
urlshortener/: Cargo.toml  Dockerfile  README.md
urlshortener/src/: main.rs  short_id.rs
